feat(contacts): JSON serialization of Contact Models
String serialization is required in order to store Contact Models in Ledger.
Like the email module, we will encode the Contact objects into JSON strings.

Change-Id: Ic7576f3474c30f9f6f9553678df3d967d828a137

--- a/modules/contacts/BUILD.gn
+++ b/modules/contacts/BUILD.gn
@@ -13,6 +13,7 @@ flutter_app("contacts") {
     "//application/lib/app/dart",
     "//apps/modular/services/story:story_dart",
     "//apps/modules/packages/config_flutter",
+    "//apps/modules/packages/fixtures",
     "//apps/modules/packages/widgets",
     "//apps/mozart/services/views:views_dart",
     "//lib/fidl/dart",
