chore(tools): consolidate scripts in //apps/modules
Change-Id: I7b229459d9cbd0de7c91806ce0d843dafd70a189

--- a/modules/contacts/BUILD.gn
+++ b/modules/contacts/BUILD.gn
@@ -22,5 +22,5 @@ flutter_app("contacts") {
     "//third_party/dart-pkg/pub/googleapis",
   ]
 
-  analysis_options = "//apps/contacts/.analysis_options"
+  analysis_options = "//apps/modules/.analysis_options"
 }
