feat(contacts): normalize the package name
Change-Id: Ic680958fc55bb07bde363a3949469fdf955cfb68

--- a/modules/contacts/pubspec.yaml
+++ b/modules/contacts/pubspec.yaml
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-name: contact_flutter
+name: contacts
 description: Flutter app to run Contacts
 dependencies:
   config_flutter:
