feat(contacts): export widgets and add generator annotation
To make the widgets appear in the widget gallery

Change-Id: Ib13da562f86dc9ce1e5a45494c075e6c364d4df2

--- a/modules/contacts/BUILD.gn
+++ b/modules/contacts/BUILD.gn
@@ -15,6 +15,7 @@ flutter_app("contacts") {
     "//apps/modules/packages/config_flutter",
     "//apps/modules/packages/fixtures",
     "//apps/modules/packages/widgets",
+    "//apps/modules/packages/widgets_meta",
     "//apps/mozart/services/views:views_dart",
     "//lib/fidl/dart",
     "//lib/flutter/packages/flutter",
