--- a/modules/contacts/BUILD.gn
+++ b/modules/contacts/BUILD.gn
@@ -11,6 +11,7 @@ flutter_app("contacts") {
 
   deps = [
     "//application/lib/app/dart",
+    "//apps/modular/services/module:module_dart",
     "//apps/modular/services/story:story_dart",
     "//apps/modules/packages/config_flutter",
     "//apps/modules/packages/fixtures",
