chore(test): add test BUILD.gn
To remove analyzer warnings.

Change-Id: Iacd706fa6d171dc98600e035c5527e85fb913e3f

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -8,3 +8,11 @@ group("contacts") {
     "//apps/modules/contacts/services",
   ]
 }
+
+group("test") {
+  testonly = true
+
+  deps = [
+    "//apps/modules/contacts/modules/contacts/test",
+  ]
+}
