--- a/modules/contacts/BUILD.gn
+++ b/modules/contacts/BUILD.gn
@@ -5,6 +5,8 @@
 import("//flutter/build/flutter_app.gni")
 
 flutter_app("contacts") {
+  package_name = "contacts"
+
   main_dart = "lib/modular_main.dart"
 
   source_dir = "lib"
