chore: Updating Alphatar which lives in lib.widgets
Change-Id: I4f926c43b19ce719a70bb386d80da970c3824c05

--- a/modules/contacts/BUILD.gn
+++ b/modules/contacts/BUILD.gn
@@ -16,11 +16,11 @@ flutter_app("contacts") {
     "//apps/modular/services/module:module_dart",
     "//apps/modular/services/story:story_dart",
     "//apps/modules/common/packages/fixtures",
-    "//apps/modules/common/packages/widgets",
     "//apps/modules/common/packages/widgets_meta",
     "//apps/mozart/services/views:views_dart",
     "//lib/fidl/dart",
     "//lib/flutter/packages/flutter",
+    "//lib/widgets/packages/widgets:lib.widgets",
     "//third_party/dart-pkg/pub/googleapis_auth",
     "//third_party/dart-pkg/pub/googleapis",
   ]
