--- a/modules/contacts/pubspec.yaml
+++ b/modules/contacts/pubspec.yaml
@@ -9,8 +9,8 @@ dependencies:
     sdk: flutter
   fixtures:
     path: ../../../common/packages/fixtures
-  widgets:
-    path: ../../../common/packages/widgets
+  lib.widgets:
+    path: ../../../../../lib/widgets/packages/widgets
   widgets_meta:
     path: ../../../common/packages/widgets_meta
 dev_dependencies:
