chore: move dart_test targets to their package roots
Change-Id: Iff20df505b8e2777f6272abd9c7a48d5811b0da2

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -13,6 +13,6 @@ group("test") {
   testonly = true
 
   deps = [
-    "//apps/modules/contacts/modules/contacts/test",
+    "//apps/modules/contacts/modules/contacts:test",
   ]
 }
