--- a/modules/contacts/BUILD.gn
+++ b/modules/contacts/BUILD.gn
@@ -2,14 +2,13 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//build/dart/dart_test.gni")
 import("//flutter/build/flutter_app.gni")
 
 flutter_app("contacts") {
   package_name = "contacts"
 
   main_dart = "lib/modular_main.dart"
-
-  source_dir = "lib"
 
   deps = [
     "//application/lib/app/dart",
@@ -23,6 +22,16 @@ flutter_app("contacts") {
     "//lib/widgets/packages/widgets:lib.widgets",
     "//third_party/dart-pkg/pub/googleapis_auth",
     "//third_party/dart-pkg/pub/googleapis",
+  ]
+
+  analysis_options = "//apps/modules/common/.analysis_options"
+}
+
+dart_test("test") {
+  deps = [
+    "//apps/modules/contacts/modules/contacts:contacts_dart_package",
+    "//lib/flutter/packages/flutter_test",
+    "//third_party/dart-pkg/pub/test",
   ]
 
   analysis_options = "//apps/modules/common/.analysis_options"
